# ray-tracer

./: Cargo.toml
src/: camera.rs  color.rs  geometry.rs  lib.rs  light.rs  model.rs  render.rs
web/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
